# fmt

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  cabal.project
.github/workflows/: ci.yml
logfmt/: logfmt.cabal
logfmt/src/Data/Fmt/: Log.hs
stringfmt/: README.md  stringfmt.cabal
stringfmt/src/Data/Fmt/: Tree.hs
vtyfmt/: vtyfmt.cabal
vtyfmt/src/Data/Fmt/: ANSI.hs
vtyfmt/src/Data/Fmt/ANSI/: Code.hs  Type.hs
